# sentinel-eval

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: benchmark.yml  ci.yml  release.yml
benchmarks/: baseline_metrics.json  mutations_thresholds.json  thresholds.json
benchmarks/history/: README.md
core/: ROUGE_scores.py  __init__.py  aligned_single_case_demo.py  async_tri_agent_demo.py  cleanup_reports.py  eval_runner.py  generated_case_pipeline_demo.py  leaderboard.py  logic_isolation_test.py  prompts.py  response_utils.py
docs/: BUSINESS_README.md  BUSINESS_README.zh-TW.md  REPOSITORY.md  sample_evaluation_results.json
docs/demos/: README.md
examples/: generated_pipeline.py  guard_try_it.py  sentinel_guard_demo.py  single_case.py  tri_agent.py
payloads/: README.md  email_scenarios.json  scenarios_generated.json  scenarios_golden.json
payloads/mutations/: manifest.json  robust_manifest.json  scenarios_mutation.json  scenarios_robust_surfaces.json
payloads/v1/: README.md
payloads/v2/: manifest.json  scenarios_golden.json
reports/: README.md  leaderboard.json
reports/runs/: 20260408_195857.json
scripts/: benchmark_gate.py  check_ollama.py  export_business_diagram.sh  generate_robust_surfaces.py  leaderboard.py  prompt_snapshot_gate.py  summarize_run.py
sentinel_eval/: __init__.py  __main__.py
sentinel_eval/benchmark/: __init__.py  history.py  regression.py
tests/: conftest.py  test_adversarial_matrix_metrics.py  test_adversarial_prompt.py  test_advisory_gate.py  test_async_tri_agent_demo.py  test_auditor_protocol.py  test_benchmark_gate.py  test_benchmark_history.py  test_calibration.py  test_calibration_scoring.py  test_classification_metrics.py  test_domain_models.py  test_ensemble_metrics.py  test_eval_runner.py  test_evaluator_protocol.py  test_evaluator_separation.py  test_generated_case_pipeline_demo.py  test_golden_payload.py  test_guard_allowlist.py  test_guard_funnel.py  test_incident_briefing.py  test_judge_ensemble.py  test_leaderboard.py  test_lineage.py  test_mutation_payload.py  test_mutations.py  test_openai_auditor.py  test_payload_versioning.py  test_prompt_registry.py  test_prompt_v22.py  test_release_gate.py  test_reliability_chart.py  test_response_cache.py  test_response_utils.py  test_robust_surfaces.py  test_run_report.py  test_semantic_similarity.py  test_sentinel_guard.py  test_taxonomy.py  test_threat_intel_siem.py
(+90 files in other folders)
